잠을 자는 고양.

--- a/Pet/WebContent/pet/PetMain.html
+++ b/Pet/WebContent/pet/PetMain.html
@@ -6,7 +6,7 @@
 <title>애완동물 객체 추상화</title>
 </head>
 <body>
-
+<img alt="고양이는고양" src="./cat.jpg">
 <script src = "cat_data.js"></script>
 <script src = "pat_main.js"></script>
 
