--- a/Pet/WebContent/pet/PetMain.html
+++ b/Pet/WebContent/pet/PetMain.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <img alt="고양이는고양" src="./cat.jpg">
+<script src = "mammal_data.js"></script>
 <script src = "cat_data.js"></script>
+<script src = "dog_data.js"></script>
 <script src = "pat_main.js"></script>
 
 </body>
